--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2025.2.1.2"
+robotpy_version = "2025.3.1.1"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
@@ -14,7 +14,7 @@ robotpy_extras = [
     # "all",
     # "apriltag",
     # "commands2",
-    # "cscore",
+    "cscore",
     # "navx",
     # "pathplannerlib",
     "phoenix5",
